tests/errors/test_42.xpp
// Unknown type declared

import "foo" as foo;

class What {
	pub fn get_one(x: Sigma, y: What) Haha {} 
}

fn foo(mut a: Unknown) void {}

fn bar() Haha {}

fn main() void {
	let x: Preposterous;

	let y: foo::NonExistent;

    let y = new Sigma;
}
